--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "crypto-js": "^4.2.0",
         "laravel-echo": "^1.17.1",
         "lodash": "^4.17.21",
+        "jquery": "^3.7.1",
         "moment": "^2.30.1",
         "qrcode.vue": "^3.5.3",
         "vue": "^3.5.11",
