--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
         "axios": "^1.11.0",
         "chart.js": "^4.4.6",
         "crypto-js": "^4.2.0",
-        "laravel-echo": "^1.17.1",
-        "lodash": "^4.17.21",
         "jquery": "^3.7.1",
+        "laravel-echo": "^2.2.4",
+        "laravel-echo-server": "^1.6.3",
+        "lodash": "^4.17.21",
         "moment": "^2.30.1",
         "qrcode.vue": "^3.5.3",
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1",
         "vue": "^3.5.11",
         "vue-chartjs": "^5.3.0",
         "vue-qrcode-reader": "^4.0.0-beta.2",
