--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
         "crypto-js": "^4.2.0",
         "jquery": "^3.7.1",
         "laravel-echo": "^2.2.4",
-        "laravel-echo-server": "^1.6.3",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
+        "pusher-js": "^8.4.0",
         "qrcode.vue": "^3.5.3",
-        "socket.io": "^4.8.1",
-        "socket.io-client": "^4.8.1",
         "vue": "^3.5.11",
         "vue-chartjs": "^5.3.0",
         "vue-qrcode-reader": "^4.0.0-beta.2",
