--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "jquery": "^3.7.1",
         "laravel-echo": "^2.2.4",
         "lodash": "^4.17.21",
+        "lodash.debounce": "^4.0.8",
         "moment": "^2.30.1",
         "pusher-js": "^8.4.0",
         "vue": "^3.5.11",
