--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.35",
+        "laravel/octane": "^2.12",
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.10.1",
         "predis/predis": "^2.2"
