--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "animejs": "^3.2.2",
         "axios": "^1.11.0",
         "chart.js": "^4.4.6",
+        "chokidar": "^4.0.3",
         "crypto-js": "^4.2.0",
         "jquery": "^3.7.1",
         "laravel-echo": "^2.2.4",
