change horizon into queue:work to make praktikum feature work

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -2,26 +2,29 @@
 nodaemon=true
 user=root
 
-[program:frankenphp]
-command=/usr/local/bin/frankenphp php-server --root=/app/public
+[program:serve]
+directory=/app  
+command=/usr/local/bin/frankenphp php-cli artisan serve --host=0.0.0.0 --port=8000
+# stdout_logfile=/var/log/supervisor/frankenphp.log
+# stderr_logfile=/var/log/supervisor/frankenphp-error.log
 autostart=true
-stdout_logfile=/var/log/supervisor/frankenphp.log
-stderr_logfile=/var/log/supervisor/frankenphp-error.log
 autorestart=true
 priority=1
 
 [program:reverb]
-command=/usr/local/bin/frankenphp php-cli /app/artisan reverb:start --host=0.0.0.0 --port=8090
-stdout_logfile=/var/log/supervisor/reverb.log
-stderr_logfile=/var/log/supervisor/reverb-error.log
+directory=/app  
+command=/usr/local/bin/frankenphp php-cli artisan reverb:start --host=0.0.0.0 --port=8090
+# stdout_logfile=/var/log/supervisor/reverb.log
+# stderr_logfile=/var/log/supervisor/reverb-error.log
 autostart=true
 autorestart=true
 priority=2
 
-[program:horizon]
-command=/usr/local/bin/frankenphp php-cli /app/artisan horizon
-stdout_logfile=/var/log/supervisor/horizon.log
-stderr_logfile=/var/log/supervisor/horizon-error.log
+[program:queue]
+directory=/app  
+command=/usr/local/bin/frankenphp php-cli artisan queue:work
+# stdout_logfile=/var/log/supervisor/horizon.log
+# stderr_logfile=/var/log/supervisor/horizon-error.log
 autostart=true
 autorestart=true
 priority=3
