--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     container_name: lms1_phpmyadmin
     restart: always
     environment:
-      PMA_HOST: mysql
+      PMA_HOST: lms1_mysql
       PMA_PORT: 3306
       PMA_USER: ${DB_USERNAME:-root}
       PMA_PASSWORD: ${DB_PASSWORD:-password}
@@ -56,7 +56,7 @@ services:
     volumes:
       - ./:/app
     ports:
-      - "8000:80"
+      - "8000:8000"
       - "8090:8090"
     networks:
       - lms1_network
