fix docker compose relating to bun

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
 
   frontend:
     image: oven/bun:1.2-alpine
-    command: sh -c "[ ! -d /home/bun/app/node_modules ] && bun run build || echo 'Node modules exists, skipping...'"
+    command: sh -c "bun i && [ ! -d /home/bun/app/node_modules ] && bun run build || echo 'Node modules exists, skipping...'"
     volumes:
       - ./:/home/bun/app
     restart: "no"
@@ -60,6 +60,8 @@ services:
       - "8090:8090"
     networks:
       - lms1_network
+    depends_on:
+      - frontend
 
 networks:
   lms1_network:
