change docker compose into dev mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,12 @@ services:
 
   frontend:
     image: oven/bun:1.2-alpine
-    command: sh -c "[ ! -d /home/bun/app/node_modules ] && bun install && bun run build || echo 'Node modules exists, skipping...'"
+    # command: sh -c "[ ! -d /home/bun/app/node_modules ] && bun install && bun run build || echo 'Node modules exists, skipping...'"
+    command: sh -c "bun run dev --host"
+    expose:
+      - "5173"
+    ports:
+      - "5173:5173"
     volumes:
       - ./:/home/bun/app
     restart: "no"
