--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -4,7 +4,8 @@ user=root
 
 [program:serve]
 directory=/app  
-command=/usr/local/bin/frankenphp php-cli artisan serve --host=0.0.0.0 --port=8000
+command=/usr/local/bin/frankenphp php-cli artisan octane:start --watch --host=0.0.0.0 --port=8000 -n
+# command=/usr/local/bin/frankenphp php-cli artisan serve --host=0.0.0.0 --port=8000
 # stdout_logfile=/var/log/supervisor/frankenphp.log
 # stderr_logfile=/var/log/supervisor/frankenphp-error.log
 autostart=true
