change to npm instead of bun because the ubuntu 18.04 vps is so old

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,9 @@ services:
     container_name: lms1_web
     build:
       context: docker
+    environment:
+      - CADDY_DISABLE_HTTP=true
+      - CADDY_DISABLE_HTTPS=true
     command: sh -c "supervisord -c /etc/supervisord.conf"
     volumes:
       - ./:/app
